still doesn't work

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <div class="settings">
         <div class="session">
             <div class="session-text">Session:</div>
-            <button class="less">&lt</button>
-            <div class="mins">25</div>
-            <button class="more">&gt</button>
+            <button class="less-session">&lt</button>
+            <div class="mins-session">2</div>
+            <button class="more-session">&gt</button>
         </div>
 
         <div class="break">
             <div class="break-text">Break:</div>
-            <button class="less">&lt</button>
-            <div class="mins">5</div>
-            <button class="more">&gt</button>
+            <button class="less-break">&lt</button>
+            <div class="mins-break">5</div>
+            <button class="more-break">&gt</button>
         </div>
 
         <div class="default">Reset to default</div>
