--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     </div>
 
     <div class="buttons">
-        <img src="images/play.png" alt="play" class="play">
-        <img src="images/pause.png" alt="pause" class="pause">
-        <img src="images/stop.png" alt="stop" class="stop">
+        <img src="images/play.png" alt="play" class="play remote">
+        <img src="images/pause.png" alt="pause" class="pause remote">
+        <img src="images/stop.png" alt="stop" class="stop remote">
     </div>
 
-    <div class="settings">
+    <div class="setting">
         <div class="session">
             <div class="session-text">Session:</div>
-            <button class="less-session">&lt</button>
-            <div class="mins-session">2</div>
-            <button class="more-session">&gt</button>
+            <button class="less-session settings">&lt</button>
+            <div class="mins-session">25</div>
+            <button class="more-session settings">&gt</button>
         </div>
 
         <div class="break">
             <div class="break-text">Break:</div>
-            <button class="less-break">&lt</button>
+            <button class="less-break settings">&lt</button>
             <div class="mins-break">5</div>
-            <button class="more-break">&gt</button>
+            <button class="more-break settings">&gt</button>
         </div>
 
         <div class="default">Reset to default</div>
