work timer finished

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="heading">
-        <div class="pomodoro">Pomodoro</div>
+        <div class="pomodoro">Pomodor</div>
         <div class="status">Ready?</div>
     </div>
 
